Fixes on ie7: - Cloned elements will have the same id and crash ie7... fixed that on the update of the query values - Added missing var declarations (ie7.9 don't understand implicit declarations, always, only when there isn't a variable with the same name on a higher scope) - Fixed minor visual problems.
Known problems identified on ie7 only:
- Going back on a advanced search using the browser back button will not produce a refine search page. This happens because ie7 doesn't support hash change. Only ie8 and up do. In this case, is recommended to use the specific button refine search on the widget, that will always work.

--- a/emif/emif/templates/bootstrap_ie_compatibility.css
+++ b/emif/emif/templates/bootstrap_ie_compatibility.css
@@ -330,6 +330,9 @@ padding: 2px;
 .search-query{
     width: 190px !important;
 }
+.lt-ie8 .canclear_outer{
+  width: 250px !important;
+}
 .lt-ie8 #row_loading {
     clear: both;
 }
